2007-08-24  Helmut Eller  <heller@common-lisp.net>

	Various cleanups related to slime-insert-propertized.

	* slime.el (slime-with-rigid-indentation): Fix evaluation order.
	(slime-indent-rigidly): New.
	(slime-insert-possibly-as-rectange): Don't set mark.
	(slime-insert-propertized): Use plain insert instead of
	slime-insert-possibly-as-rectange.

2007-08-24  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (sbcl-inspector): Fix typo.

2007-08-23  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Repair inspection of presentations.

	* swank.lisp (inspect-presentation): New slimefun.
	* slime.el (slime-inspect-presentation-at-mouse): Use it here.

2007-08-23  Helmut Eller  <heller@common-lisp.net>

	Move Marco Baringer's inspector to contrib.

	* swank.lisp (*default-inspector*): New variable. Set this
	variable dispatch to different inspectors.
	(inspect-object): Use it.

	* swank-loader.lisp (*contribs*): Add 'swank-fancy-inspector.

	* swank-backend.lisp (backend-inspector): New class.  Introduce a
	named class to give as another way to dispatch to backend methods.

	* swank-cmucl.lisp: Use backend-inspector class.
	* swank-sbcl.lisp: Use backend-inspector class.
	* swank-clisp.lisp: Use backend-inspector class.
	* swank-lispworks.lisp: Use backend-inspector class.
	* swank-allegro.lisp: Use backend-inspector class.
	* swank-openmcl.lisp: Use backend-inspector class.
	* swank-abcl.lisp: Use backend-inspector class.
	* swank-corman.lisp: Use backend-inspector class.
	* swank-scl.lisp: Use backend-inspector class.

2007-08-23  Tobias C. Rittweiler <tcr@freebits.de>

	Added arglist display for declaration specifiers and type
	specifiers.

	Examples:

	`(declare (type' will display

	   (declare (type type-specifier &rest vars))

	`(declare (type (float' will display

	   [Typespec] (float &optional lower-limit upper-limit)

	`(declare (optimize' will display

	   (declare (optimize &any (safety 1) (space 1) (speed 1) ...))
