@@ -1,3 +1,7 @@
+2007-08-24  Helmut Eller  <heller@common-lisp.net>
+
+	* slime-scratch.el: New file.
+
 2007-08-23  Helmut Eller  <heller@common-lisp.net>
 
 	Move Marco Baringer's inspector to contrib.
